@@ -6,10 +6,14 @@ TODO: anyevent::trace? or debug tracing all watchers?
 TODO: anyevent strict checking for $_ changes?
 
 TODO: Kevin Ryde         (3.8K)   1 inbox       Glib child processes
+TODO: keeps alive, self-reference, storabel et al.
 	- INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
           the TTL as fourth element - this affects ->resolve directly,
           and ->request and ->dns_unpack indirectly. Convenience functions
           such as AnyEvent::DNS::{a,txt,mx,srv} are not affected.
+        - some read types (regex, netstring, json, storable) could
+          errornously keep an AE::Handle object alive on their own
+          (reported by Mohammad Toossi).
 	- add support for (currently third-party) AnyEvent::Impl::FLTK.
         - many read types in AnyEvent::Handle would malfunction during
           transitions to TLS because of a "delete $self->{rbuf}".
